# electricity-price

./: 01_Home.py  README.rst  cli.py  entsoe.py  get-electricity-price.py  logging.txt  pyproject.toml  requirements.txt  timeprice.json
electricity_price/: cli.py  entsoe.py
